--- a/tests/reverse-proxy-ingress_test.yaml
+++ b/tests/reverse-proxy-ingress_test.yaml
@@ -4,11 +4,13 @@ values:
 templates:
   - reverse-proxy-ingress.yaml
 tests:
-  - it: should pass all kinds of assertion
-    documentIndex: 0
+  - it: should have 2 documents
     asserts:
       - hasDocuments:
           count: 2
+  - it: should contain 2 paths
+    documentIndex: 0
+    asserts:
       - isAPIVersion:
           of: networking.k8s.io/v1
       - isKind:
@@ -39,5 +41,29 @@ tests:
                 name: aks-future-api
                 port:
                   number: 80
+  - it: should contain 1 path
+    documentIndex: 1
+    asserts:
+      - isAPIVersion:
+          of: networking.k8s.io/v1
+      - isKind:
+          of: Ingress
+      - equal:
+          path: metadata.annotations
+          value:
+            nginx.ingress.kubernetes.io/ssl-redirect: "false"
+            nginx.ingress.kubernetes.io/rewrite-target: /static/$2
+      - contains:
+          path: spec.rules[0].http.paths
+          content:
+            path: /static(/|$)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: aks-current-api
+                port:
+                  number: 80
+  - it: should match the snapshot
+    asserts:
       - matchSnapshot:
           path: spec
